# wesl-metadata

./: .editorconfig  Cargo.toml  LICENSE.md  README.md  deny.toml  typos.toml
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  docs_improvement.md
.github/workflows/: ci.yaml  dependencies.yaml  weekly.yaml  welcome.yaml
src/: clippy.toml  dependency.rs  errors.rs  lib.rs
