[package]
name = "wesl-metadata"
version = "0.21.0"
authors = ["Benjamin Brienen <Benjamin.Brienen@outlook.com>"]
repository = "https://github.com/BenjaminBrienen/wesl-metadata"
description = "structured access to the output of `wesl metadata`"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.89.0"

[dependencies]
camino = { version = "1.0.7", features = ["serde1"] }
derive_builder = { version = "0.20", optional = true }
semver = { version = "1.0.7", features = ["serde"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.118", features = ["unbounded_depth"] }
thiserror = "2.0.3"

[features]
default = []
builder = ["derive_builder"]
unstable = []

[package.metadata.docs.rs]
all-features = true
